# tripvota

./: .dockerignore  .gitignore  .gitmodules  .prettierignore  README.md  docker-compose.yaml
.cursor/: rules
.cursor/rules/: database-workflow.mdc  graphql-postgraphile-id.mdc  monorepo.mdc  naming-conventions.mdc  path-handling.mdc  protobuf-workflow.mdc  seaorm-2.0.0.mdc  specify-rules.mdc
.github/workflows/: ci.yml
.specify/memory/: constitution.md
docker/: postgresql-ext.Dockerfile  server.Dockerfile  web.Dockerfile
docs/: uiux-prototype.md
docs/dev-ai-chat-history/: 2025-11-11-100011-agent-first-try.md
docs/dev-history/: 2025-11-10-172400-feat-touch-dnd-support.md
docs/sql/: mvp.sql
rust-workspace/: Cargo.toml
rust-workspace/apps/server/: .env.example  Cargo.toml  appsettings.json  build.rs
rust-workspace/apps/server/src/: error.rs  main.rs
rust-workspace/apps/server/src/auth/: jwt.rs  password.rs  service.rs
rust-workspace/apps/server/src/bot/: service.rs
scripts/: build-server-image.sh  changed-rust-crates.sh  changed-rust-lint.sh  generate-entities.sh
share/proto/: auth.proto  bot.proto  hello.proto
specs/001-simple-iam-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-simple-iam-auth/checklists/: requirements.md
specs/001-simple-iam-auth/contracts/: auth.proto
specs/002-dev-bot-crud/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
typescript-workspace/: .eslintignore  .prettierignore  .prettierrc  package.json  pnpm-lock.yaml
(+68 files in other folders)
