[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
async-stream = "0.3.6"
axum = "0.8"
axum-connect = "0.5.3"
axum-extra = "0.10.0"
argon2 = "0.5"
jsonwebtoken = "9"
prost = "0.13"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2.0.11"
tower-http = { version = "0.6.2", features = ["cors"] }
read-app-configuration = { path = "../../packages/read-app-configuration" }
sea-orm = { version = "^2.0.0-rc", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
] }

[build-dependencies]
axum-connect-build = "0.5.3"
